force-app/main/default/objects/CventEvents__Respondent__c/CventEvents__Respondent__c.object-meta.xml
<CustomObject>
    <description>Represents the respondent of a survey.</description>
    <label>Survey Respondent</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Respondent Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>