force-app/main/default/objects/CventEvents__Respondent__c/fields/CventEvents__LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__LastModifiedDate__c</fullName>
    <label>Last Modified Date (Cvent)</label>
    <type>DateTime</type>
</CustomField>