force-app/main/default/objects/CventEvents__Respondent__c/fields/CventEvents__RespondedDate__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RespondedDate__c</fullName>
    <label>Responded Date</label>
    <type>DateTime</type>
</CustomField>