force-app/main/default/objects/CventEvents__Respondent__c/fields/CventEvents__RespondentCode__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RespondentCode__c</fullName>
    <label>Respondent Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>