force-app/main/default/objects/CventEvents__Respondent__c/fields/CventEvents__RespondentStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__RespondentStub__c</fullName>
    <externalId>true</externalId>
    <label>Respondent Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>