force-app/main/default/objects/CventEvents__Respondent__c/fields/CventEvents__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>